private-cluster-tailscale/k8s/app/network-policy.yaml
# network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hungry-echoes-network-policy
spec:
  podSelector:
    matchLabels:
      app: hungry-echoes
  policyTypes:
    - Ingress
  ingress:
    # Allow public traffic through ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080  # Application port
    # Allow metrics traffic only from Tailscale
    - from: []
        # TODO Create a tighter policy to allow allow traffic from certain namespaces and/or pods (like Tailscale + debug)
        # - namespaceSelector:
        #     matchLabels:
        #       kubernetes.io/metadata.name: tailscale

      ports:
        - protocol: TCP
          port: 8081  # Metrics port
